k8s/recovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-api
  template:
    metadata:
      labels:
        app: stream-api
    spec:
      containers:
      - name: gateway-cnt
        image: aksacr.azurecr.io/api-gateway:v1
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-cnt
        image: aksacr.azurecr.io/auth-service:v1
        ports:
        - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-cnt
        image: aksacr.azurecr.io/order-service:v1
        ports:
        - containerPort: 8005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-cnt
        image: aksacr.azurecr.io/product-service:v1
        ports:
        - containerPort: 8003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-cnt
        image: aksacr.azurecr.io/user-service:v1
        ports:
        - containerPort: 8002
