k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomm-ingress
  annotations:
    # Agar aap Nginx controller use kar rahe hain
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # ==============================================================
  # RULE 1: Frontend Service Ke Liye (Aapki Website yahan khulegi)
  # ==============================================================
  - host: shop.local            # <-- DEKHO: Yeh raha aapka Host (Agar aapka real domain 'mywebsite.com' hai to wo likhna)
    http:
      paths:
      - path: /                 # <-- DEKHO: Yeh raha Path ( / ka matlab website pe udte hi kya khulega)
        pathType: Prefix
        backend:
          service:
            name: frontend      # Frontend Service ka internal Kubernetes naam
            port: 
              number: 80        # Humne Dockerfile me port 80 diya tha yaad hai?

  # ==============================================================
  # RULE 2: API Gateway Ke Liye (Backend ka Traffic idhar aayega)
  # ==============================================================
  - host: api.shop.local        # <-- DEKHO: API Gateway ke liye Host (Subdomain) alag se diya gaya hai
    http:
      paths:
      - path: /                 # <-- Path is host ke liye
        pathType: Prefix
        backend:
          service:
            name: stream-api-svc   # Traffic seedha Kubernetes ki API gateway service par girega
            port: 
              number: 8000      # Humne Gateway ka port 8000 rakha tha


  # ==============================================================
  # BAKI 8 SERVICES KA KYA HUA BHAI? (Auth, Cart, User etc.)
  # ==============================================================
  # DEKHA? Ingress file yahin khatam ho gai!
  # Yahan maine jaan-buch kar Auth, User ya Cart service ka koi rule nahi likha hai.
  # Ab hoga ye ki:
  # 1. Jaise hi user 'api.shop.local/login' pe jayega..
  # 2. Ingress is rule ko follow karke request 'api-gateway' ko pakda dega.
  # 3. Phir api-gateway andar hi andar (bina is file ki madad ke) request 'auth-service' ko forward kardega.
  # 
  # Isiliye hum kehte hain aapko sirf Ingress In dono k liye hi likhna tha!
